@@ -1,4 +1,5 @@
 2.5.6 -> 2.5.7:
+	- permit mixing source/binary rpms on install cmd line.
 	- make '-' character illegal (again) in version/release.
 	- update URL in man page.
 	- use portable #!/bin/sh (Tim Mooney).
